# 2017webrobotsimulator

./: README.md  flask.yaml  mongo.yaml  pv.yaml
flask/: Dockerfile  README.md  app.py  requirements.txt
flask/controllers/: default_controller.py  user_controller.py
flask/swagger/: swagger.yaml
flask/templates/: custom.html  deploys.html  gzlaunch.html  home.html  login.html  pods.html  register.html  upload.html
roscloudbridge/: CMakeLists.txt  README.md  package.xml  setup.py
roscloudbridge/config/: try.yaml
roscloudbridge/launch/: bridge.launch
roscloudbridge/scripts/: bridge.py
skele-cli/: README.rst
skele-cli/skele/: cli.py
tests/: cloudpub_move_robot.py  test_tf.py  Νέο Microsoft Excel Worksheet.xlsx
tests/auth/: auth_roslibpy_clock.py  auth_roslibpy_map.py  auth_roslibpy_tf.py  auth_roslibpy_tf_static.py
tests/bond_status/: 2roslibpy_bond_status.py  local_bond_status  remote_bond_status
tests/clock/: 2roslibpy_clock.py  local_clock  remote_clock
tests/image_compressed/: 2roslibpy_image_compressed.py  local_image_compressed  remote_image_compressed
tests/image_raw/: 2roslibpy_image_raw.py  local_image_raw  remote_image_raw
tests/imu/: 2roslibpy_imu.py  local_imu  remote_imu
tests/joint_state/: 2roslibpy_joint_state.py  local_joint_states  remote_joints_states
tests/laserscan/: 2roslibpy_laserscan.py  local_laserscan  remote_laserscan
tests/map/: 2roslibpy_map.py  2roslibpy_map.py.save  lala  lala.save
tests/odom/: 2roslibpy_odom.py  local_odom  remote_odom
web_simulator_image/: Dockerfile  README.md  web_simulator_image.rar
(+19 files in other folders)
